@@ -92,6 +92,33 @@ public class TestDenseMatrix extends TestCase {
     assertEquals(m1.getColumnAttribute(1), null);
   }
 
+  public void testSubMatrix() throws IOException {
+    SubMatrix a = m1.subMatrix(2, 4, 2, 4);
+    for (int i = 0; i < a.size(); i++) {
+      for (int j = 0; j < a.size(); j++) {
+        assertEquals(a.get(i, j), m1.get(i + 2, j + 2));
+      }
+    }
+    
+    SubMatrix b = m2.subMatrix(0, 2, 0, 2);
+    SubMatrix c = a.mult(b);
+    
+    double[][] C = new double[3][3];
+    for (int i = 0; i < 3; i++) {
+      for (int j = 0; j < 3; j++) {
+        for (int k = 0; k < 3; k++) {
+          C[i][k] += m1.get(i + 2, j + 2) * m2.get(j, k);
+        }
+      }
+    }
+    
+    for (int i = 0; i < 3; i++) {
+      for (int j = 0; j < 3; j++) {
+        assertEquals(C[i][j], c.get(i, j));
+      }
+    }
+  }
+
   /**
    * Test matrices addition
    * 
